--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "reactstrap": "^8.7.1",
     "redux": "^4.0.5",
     "tld-extract": "^2.0.0",
     "typescript": "^4.0.3",
